# shardsub

./: .gitignore  LICENSE  MANIFEST.in  README.internal.md  README.md  __init__.py  cleaner.py  config.py  ocr_engine.py  ocr_parser.py  pipeline.py  pyproject.toml  requirements.txt  segment_builder.py  video_io.py  writer.py
model/common/textline_orientation/: README.md  config.json
src/shardsub/: __init__.py  band_detector.py  config.py  image_ops.py  ocr_engine.py  pipeline.py  similarity.py  types.py  writer.py
tests/: test_cleaner.py  test_segment_builder.py
