[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shardsub"
version = "0.1.0"
description = "A hard-subtitle extraction library built on PaddleOCR."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "superwudi" }
]
keywords = ["ocr", "subtitle", "hardsub", "paddleocr", "video"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy>=2.0,<3",
  "opencv-contrib-python>=4.10,<5",
  "paddleocr>=3.6,<4",
  "paddlex>=3.6,<4",
  "platformdirs>=4,<5",
]

[project.urls]
Homepage = "https://github.com/superwudi6669-cyber/shardsub"
Repository = "https://github.com/superwudi6669-cyber/shardsub"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
